created with System Designer

--- a/Walt-Disney-Pictures.html
+++ b/Walt-Disney-Pictures.html
@@ -11,7 +11,7 @@
 
 <body>
   <!-- system runtime  -->
-  <script log="debug" src="https://cdn.jsdelivr.net/npm/system-runtime/dist/system-runtime.min.js"></script>
+  <script log="info" src="https://cdn.jsdelivr.net/npm/system-runtime/dist/system-runtime.min.js"></script>
 </body>
 
 </html>
