--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to the Landing Page</h1>
+    <h1>Welcome Page</h1>
   </header>
 
   <div class="intro">
@@ -74,9 +74,9 @@
 
   <div class="link-tree">
     <h3>Link Tree</h3>
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <a href="movicolon.gitub.io/lifemaster/dependence.html">ZULM</a>
+    <a href="movicolon.gitub.io/lifemaster/debility.html">UGUR</a>
+    <a href="movicolon.gitub.io/lifemaster/dread.html">DIN</a>
   </div>
 
   <script>
