--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <p>This is the intro section of the landing page. Add your introductory content here.</p>
   </div>
 
-  <img id="image" src="image1.jpg" alt="Random Image" />
+  <img id="SLIT" src="UGUR.jpg" alt="pixels" />
 
   <div class="link-tree">
     <h3>Link Tree</h3>
