--- a/OYUNLAR.HTML
+++ b/OYUNLAR.HTML
@@ -1,51 +1,24 @@
+ 
 <body>
-
-  <ul>
-
 <h1>Games from Games People Play</h1>
 
-Life Games
-Alcoholic
-Debtor
-Kick Me
-Now I’ve Got You, You Son of a Bitch
-See What You Made Me Do
-Marital Games
-Corner
-Courtroom
-Frigid Woman
-Harried
-Look How Hard I’ve Tried
-Sweetheart
-Party Games
-Ain’t It Awful
-Blemish
-Schlemiel
-Why Don’t You – Yes But
-Sexual Games
-Let’s You and Him Fight
-Perversion
-Rapo
-The Stocking Game
-Uproar
-Underworld Games
-Cops and Robbers
-How Do You Get Out of Here
-Let’s Pull a Fast One on Joey
-Consulting Room Games
-Greenhouse
-I’m Only Trying to Help You
-Indigence
-Peasant
-Psychiatry
-Stupid
-Wooden Leg
-Good Games
-Busman’s Holiday
-Cavalier
-Happy to Help
-Homely Sage
-They’ll Be Glad They Knew Me
-    
-  </ul>
-</body>
+    <h2>Life Games</h2>
+ 
+<li>Alcoholic</li>
+<li>Debtor</li>
+<li>Kick Me</li>
+<li>Now I’ve Got You, You Son of a Bitch</li>
+<li>See What You Made Me Do</li>
+    <h2>Marital Games</h2>
+<li>Corner</li>
+<li>Courtroom</li>
+<li>Frigid Woman</li>
+<li>Harried</li>
+<li>Look How Hard I’ve Tried</li>
+<li>Sweetheart</li>
+ <h2>Party Games</h2>
+<li>Ain’t It Awful</li>
+<li>Blemish</li>
+<li>Schlemiel</li>
+<li>Why Don’t You – Yes But</li>
+ <h2>Sexual Games</h2>
