--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <script>
     function changeImage() {
       var images = [
-        "image1.jpg",
+        "UGUR.jpg",
         "image2.jpg"
       ];
       var randomNumber = Math.floor(Math.random() * images.length);
@@ -67,8 +67,29 @@
 
   <div class="intro">
     <h2>Intro Section</h2>
-    <p>This is the intro section of the landing page. Add your introductory content here.</p>
-  </div>
+    <p>weón [we'on] - dude/friend or stupid
+abacanao - presumptuous
+agarrar (con alguien) - to kiss (smb. else)
+agarrarse - to get in a fight
+al tiro - right away
+apretao - stingy or tight
+arrastre - to have influence on others
+avisparse - to realize
+bacán - awesome
+cachar - to understand
+caleta - a lot
+cana - jail
+chanchada - disloyal act/eat like a pig
+completo - hot dog
+chupar - to consume alcohol
+echar la foca (lit. throw the seal/breath) - to severely address someone or express disapproval or disappointment
+emputecer - getting mad
+engrupir - to fool or influence someone
+fome - boring
+garúa - drizzle
+hacer perro muerto (lit. do a dead dog) - to dine and dash or do something similar
+pesao - mean
+sapear - to spy or eavesdrop</p> </div>
 
   <img id="SLIT" src="UGUR.jpg" alt="pixels" />
 
