--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     function changeImage() {
       var images = [
         "UGUR.jpg",
-        "image2.jpg"
+        "zulm.jpg"
       ];
       var randomNumber = Math.floor(Math.random() * images.length);
       document.getElementById("image").src = images[randomNumber];
