--- a/OYUNLAR.HTML
+++ b/OYUNLAR.HTML
@@ -22,3 +22,27 @@
 <li>Schlemiel</li>
 <li>Why Don’t You – Yes But</li>
  <h2>Sexual Games</h2>
+<li>Let’s You and Him Fight</li>
+<li>Perversion</li>
+<li>Rapo</li>
+<li>The Stocking Game</li>
+<li>Uproar</li>
+<h2>Underworld Games</h2>
+<li>Cops and Robbers</li>
+<li>How Do You Get Out of Here</li>
+<li>Let’s Pull a Fast One on Joey</li>
+<h2>Consulting Room Games</h2>
+<li>Greenhouse</li>
+<li>I’m Only Trying to Help You</li>
+<li>Indigence</li>
+<li>Peasant</li>
+<li>Psychiatry</li>
+<li>Stupid</li>
+<li>Wooden Leg</li>
+<h2>Good Games</h2>
+<li>Busman’s Holiday</li>
+<li>Cavalier</li>
+<li>Happy to Help</li>
+<li>Homely Sage</li>
+<li>They’ll Be Glad They Knew Me</li>
+
