--- a/badthings.html
+++ b/badthings.html
@@ -8,7 +8,7 @@
 <body>
 <h1>OFFICIAL HEAR YE HEAR YE</h1>
 
-<p>I'm saying that JUSTIN-DAVID:MOVICK is found dead in the law of Christiadom-spiritual-law in a place known as the land of the dead of the Islamic Umma. Now, JOSTINE COLIN-MOVICK is the one who officially gets the rights and money there. This happens because Allah is kind and compassionate.</p>
+<p>I'm saying that JUSTIN-DAVID:MOVICK is found "dead": in the law of Christiadom-spiritual-law. "Fit, awake and straight" in a place known as the مون-زي-لا-باي-إي-نال-مون-زي-لا-تاي-يون of the Islamic Umma. Now, JOSTINE COLIN-MOVICK is the one who officially gets the rights and money there. This happens because Allah is kind and compassionate.</p>
 
 <p>I did bad things like stealing from my mom and my neighbors, and doing other stuff against the law. But because I'm in America, I don't get punished like in Shariah law, even though I know it's good.</p>
 
