--- a/badthings.html
+++ b/badthings.html
@@ -6,9 +6,9 @@
 <title>OFFICIAL HEAR YE HEAR YE</title>
 </head>
 <body>
-<h1>OFFICIAL HEAR YE HEAR YE</h1>
+<h1>HEAR YE HEAR YE</h1>
 
-<p>I'm saying that JUSTIN-DAVID:MOVICK is found "dead": in the law of Christiadom-spiritual-law. "Fit, awake and straight" in a place known as the مون-زي-لا-باي-إي-نال-مون-زي-لا-تاي-يون of the Islamic Umma. Now, JOSTINE COLIN-MOVICK is the one who officially gets the rights and money there. This happens because Allah is kind and compassionate.</p>
+<p>I'm stating that JUSTIN-DAVID:MOVICK is deemed "absent" according to the law of Christiadom-spiritual-law. In a place known as the مون-زي-لا-باي-إي-نال-مون-زي-لا-تاي-يون of the Islamic Umma, they are "present, alert, and upright". Now, JOSTINE COLIN-MOVICK is officially entitled to the rights and funds there. This occurs due to the kindness and compassion of Allah..</p>
 
 <p>I did bad things like stealing from my mom and my neighbors, and doing other stuff against the law. But because I'm in America, I don't get punished like in Shariah law, even though I know it's good.</p>
 
