--- a/badthings.html
+++ b/badthings.html
@@ -32,7 +32,7 @@
 
   <!-- Guest Book Widget -->
 <div id="guestbook">
-  <h2>Guest Book</h2>
+  <h2>A.M.D.G. – Testes, Testimonium </h2>
   <textarea id="message" rows="4" cols="50"></textarea><br>
   <button onclick="addMessage()">Add Message</button>
   <ul id="messages"></ul>
