--- a/index.html
+++ b/index.html
@@ -67,30 +67,38 @@
 
   <div class="intro">
     <h2>Intro Section</h2>
-    <p>weón [we'on] - dude/friend or stupid
-abacanao - presumptuous
-agarrar (con alguien) - to kiss (smb. else)
-agarrarse - to get in a fight
-al tiro - right away
-apretao - stingy or tight
-arrastre - to have influence on others
-avisparse - to realize
-bacán - awesome
-cachar - to understand
-caleta - a lot
-cana - jail
-chanchada - disloyal act/eat like a pig
-completo - hot dog
-chupar - to consume alcohol
-echar la foca (lit. throw the seal/breath) - to severely address someone or express disapproval or disappointment
-emputecer - getting mad
-engrupir - to fool or influence someone
-fome - boring
-garúa - drizzle
-hacer perro muerto (lit. do a dead dog) - to dine and dash or do something similar
-pesao - mean
-sapear - to spy or eavesdrop</p> </div>
+ <ul>
+  <li>weón [we'on] - dude/friend or stupid</li>
+  <li>abacanao - presumptuous</li>
+  <li>agarrar (con alguien) - to kiss (smb. else)</li>
+  <li>agarrarse - to get in a fight</li>
+  <li>al tiro - right away</li>
+  <li>apretao - stingy or tight</li>
+  <li>arrastre - to have influence on others</li>
+  <li>avisparse - to realize</li>
+  <li>bacán - awesome</li>
+  <li>cachar - to understand</li>
+  <li>caleta - a lot</li>
+  <li>cana - jail</li>
+  <li>chanchada - disloyal act/eat like a pig</li>
+  <li>completo - hot dog</li>
+  <li>chupar - to consume alcohol</li>
+  <li>echar la foca (lit. throw the seal/breath) - to severely address someone or express disapproval or disappointment</li>
+  <li>emputecer - getting mad</li>
+  <li>engrupir - to fool or influence someone</li>
+  <li>fome - boring</li>
+  <li>garúa - drizzle</li>
+  <li>hacer perro muerto (
+   </div>
 
+<div>
+    <h2>Snug-Fitting Clothing</h2>
+    <p>Explore a collection of snug-fitting clothing designed for comfort and style.</p>
+    <p>Discover garments that provide a sense of security and support, without compromising on functionality.</p>
+    <p>Perfect for those seeking comfort and style in their everyday wear.</p>
+</div>
+
+  
   <img id="SLIT" src="UGUR.jpg" alt="pixels" />
 
   <div class="link-tree">
